fixed layout bug: sidebar shifts down when browser window becomes too narrow

--- a/bibsonomy-webapp/src/main/webapp/resources/css/style.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/style.css
@@ -365,7 +365,7 @@ div.bibentry {
 
 #sidebarroundcorner {
 	float: right;
-	width: 25%;
+	width: 23%;
 	margin-top: 5px;
 	margin-right: 5px;
 	padding: 3px;
